Closed Bug 467289 Opened 17 years ago Closed 17 years ago

Favicon for file://localhost/ isn't scaled down

Categories

(Camino Graveyard :: Bookmarks, defect)

All
macOS
defect
Not set
minor

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: stuart.morgan+bugzilla, Assigned: chris)

Details

Attachments

(1 file)

From the forums: http://forums.mozillazine.org/viewtopic.php?f=12&t=972715 file://localhost/ uses the volume icon as the favicon, but it uses the 32x32 version without scaling it down.
Haha; I've had this screenshotted for years in my "weird UI I can't repro" folder. hendy, will bug 463725 fix this (or only if the volume icon has a smaller size)?
Attached patch Fix v1.0Splinter Review
hendy: turns out the provider will only resize the favicon if the load succeeds; since we can't load /localhost/, it never gets to that code [3:52pm] sauron: yet we still get the icon? [3:53pm] hendy: yep, because it gets the icon from NSWorkspace regardless Adds logic to allow for the possibility that a file didn't load, yet has an icon. That way, the resizing part of the code is run. The resized icon may look blurry, but that will be fixed as part of Bug 463725.
Assignee: nobody → trendyhendy2000
Status: NEW → ASSIGNED
Attachment #350736 - Flags: review?(stuart.morgan+bugzilla)
Comment on attachment 350736 [details] [diff] [review] Fix v1.0 r/sr=smorgan
Attachment #350736 - Flags: review?(stuart.morgan+bugzilla) → superreview+
Landed on cvs trunk.
Status: ASSIGNED → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: