Bug 467289 - Site icon for file://localhost/ isn't scaled down in bookmarks.  Patch by Christopher Henderson <trendyhendy2000@gmail.com>, r/sr=smorgan